# vclogin/swagger.json
@@ -12,7 +12,7 @@
       "type": "apiKey",
       "name": "Authorization",
       "in": "header",
-      "description": "API key required to authenticate requests. Format: 'API_KEY <your_api_key>'"
+      "description": "API key required to authenticate requests. Format: 'INCR_AUTH_API_SECRET <your_api_key>'"
     }
   },
   "security": [
@@ -89,59 +89,11 @@
                 "uuid": {
                   "type": "string",
                   "description": "UUID of the created temporary authorization"
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Bad request"
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "500": {
-            "description": "Internal server error"
-          }
-        }
-      }
-    },
-    "/api/dynamic/getQRCodeString": {
-      "get": {
-        "summary": "Get QR code string by UUID",
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "description": "Authorization policy",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "uuid": {
-                  "type": "string",
-                  "description": "UUID of the temporary authorization",
-                  "example": "9d2b91fe-ab18-4a61-9b33-3d06e8d6c96f"
                 },
-                "userId": {
-                  "type": "string",
-                  "description": "userId of the user",
-                  "nullable": true,
-                  "example": "did:key:z6Mkj5B9HcSKWGuuawpBcvy5wQwZJ9g2k5HzfmXPAjwbQ9TT"
-                }
-              },
-              "required": ["policy"]
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Successful response",
-            "schema": {
-              "type": "object",
-              "properties": {
                 "qrCodeString": {
                   "type": "string",
                   "description": "QR code string",
-                  "example": "openid-vc://?client_id=did:key:z6Mkj5B9HcSKWGuuawpBcvy5wQwZJ9g2k5HzfmXPAjwbQ9TT&request_uri=https%3A%2F%2Fexample.com%2Fapi%2Fdynamic%2FpresentCredentialById%3Flogin_id%3D9b25be26-8939-4a8c-a6da-9a145fa8242d"
+                  "example": "openid-vc://?client_id=did:key:z6Mkj5B9HcSKWGuuawpBcvy5wQwZJ9g2k5HzfmXPAjwbQ9TT&request_uri=https%3A%2F%2Fexample.com%2Fapi%2Fdynamic%2FpresentCredentialById%3Fauth_id%3D9b25be26-8939-4a8c-a6da-9a145fa8242d"
                 }
               }
             }
@@ -163,7 +115,7 @@
         "summary": "Get authtorization response and user claims by UUID",
         "parameters": [
           {
-            "name": "uuid",
+            "name": "auth_id",
             "in": "query",
             "description": "UUID to fetch auth_res and claims",
             "required": true,
@@ -181,7 +133,7 @@
                   "description": "Authentication result",
                   "enum": [
                     "success",
-                    "error_presentation_not_trused",
+                    "error_presentation_not_trusted",
                     "error_invalid_presentation",
                     "error_not_found"
                   ],
